check translation module in main header

--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -4,7 +4,7 @@
    <a [routerLink]="'' | localize">Whocan</a>
   </div>
   <nav>
-    <a [routerLink]="''">Как єто работает</a>
+    <a [routerLink]="''">{{'header.how_it_works' | translate}}</a>
     <a [routerLink]="'catalog'">Каталог</a>
     <a [routerLink]="''">Проэкты</a>
   </nav>
