--- a/src/app/catalog-page/catalog-page.component.html
+++ b/src/app/catalog-page/catalog-page.component.html
@@ -1,1 +1,7 @@
-<p>catalog-page works!</p>
+<app-main-header></app-main-header>
+
+<div class="categorys-list">
+  <div class="category">design</div>
+  <div class="category">front</div>
+  <div class="category">backend</div>
+</div>
