--- a/src/app/authorization-page/registration-page/registration-page.component.html
+++ b/src/app/authorization-page/registration-page/registration-page.component.html
@@ -1,1 +1,58 @@
-<p>registration-page works!</p>
+<div class="registration-bl">
+  <div class="container">
+    <div class="row">
+
+        <h2>Регистрация</h2>
+        <p class="text">Добро пожаловать на лучшую платформу фриланса Whocan!</p>
+        <!-- <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <div class="input-group input-group-alternative mb-3">
+
+              <input class="form-control" placeholder="Email" type="email" formControlName="email"
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }" [ngModel]="user.email">
+              <div *ngIf="submitted && !!f.email.errors" class="invalid-feedback">
+                <div *ngIf="!!f.email.errors.required">Email is required</div>
+                <div *ngIf="!!f.email.errors.email">Email must be a valid email address</div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group input-group-alternative">
+
+              <input class="form-control" placeholder="Password" type="password" formControlName="password"
+                [ngClass]="{ 'is-invalid': submitted && f.password.errors }" [(ngModel)]="user.password">
+              <div *ngIf="submitted && !!f.password.errors" class="invalid-feedback">
+                <div *ngIf="!!f.password.errors.required">Password is required</div>
+                <div *ngIf="!!f.password.errors.minlength">Password must be at least 6 characters</div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="password" formControlName="confirmPassword" placeholder="Confirm Password" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+            <div *ngIf="submitted && !!f.confirmPassword.errors" class="invalid-feedback">
+              <div *ngIf="!!f.confirmPassword.errors.required">Confirm Password is required</div>
+              <div *ngIf="!!f.confirmPassword.errors.mustMatch">Passwords must match</div>
+            </div>
+          </div>
+          <div class="row my-4">
+            <div class="col-12">
+              <div class="checkbox">
+                <label class="checkbox" for="customCheckRegister">
+                  <input class="custom-control-input" id="customCheckRegister" type="checkbox" formControlName="policy"
+                  [ngClass]="{ 'is-invalid': submitted && f.policy.errors }">
+                  <span class="checkbox__text">Я согласен(а) с <a href="#!">Политикой конфиденциальности</a></span>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary mt-4">Зарегистрироваться</button>
+          </div>
+        </form> -->
+
+
+      </div>
+    </div>
+  </div>
+
