--- a/src/app/authorization-page/login-page/login-page.component.html
+++ b/src/app/authorization-page/login-page/login-page.component.html
@@ -1,1 +1,44 @@
-<p>login-page works!</p>
+<div class="login-bl">
+  <div class="container">
+    <div class="row">
+      <div class="">
+        <h2>Войти в личный кабинет</h2>
+        <p class="text">Рады видеть вас снова</p>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <!-- <label for="email">email</label> -->
+            <input placeholder="email" type="text" formControlName="email" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+            <div *ngIf="submitted && !!f.email.errors" class="invalid-feedback">
+              <div *ngIf="!!f.email.errors.required">Username is required</div>
+            </div>
+          </div>
+          <div class="form-group password">
+            <!-- <label for="password">Password</label> -->
+            <input placeholder="password" type="password" formControlName="password" class="form-control"
+              [showHideInput]="showPassword" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <span class='pass hide' (click)="showPassword = !showPassword"></span>
+            <div *ngIf="submitted && !!f.password.errors" class="invalid-feedback">
+              <div *ngIf="!!f.password.errors.required">Password is required</div>
+            </div>
+          </div>
+          <div class="controll-block">
+            <div class="form-group checkbox">
+              <label class="checkbox"><input class='remember' type="checkbox">
+                <div class="checkbox__text">
+                  Запомнить меня
+                </div>
+              </label>
+            </div>
+            <div class="get-pass">
+              Не помню пароль
+            </div>
+          </div>
+
+          <div class="form-group text-center">
+            <button class="btn">Войти</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
