--- a/src/app/authorization-page/authorization-page.component.scss
+++ b/src/app/authorization-page/authorization-page.component.scss
@@ -14,6 +14,9 @@
   &.login {
       .login-form {
           width: 60%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
       }
 
       .registr-form {
@@ -47,26 +50,26 @@
       width: 40%;
       overflow: hidden;
 
-      &:before,
-      &:after {
-          position: absolute;
-          content: '';
-          width: 336px;
-          height: 336px;
-          right: -70px;
-          bottom: 0;
-          opacity: 0.9;
-          box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
-          border-radius: 40px;
-      }
+      // &:before,
+      // &:after {
+      //     position: absolute;
+      //     content: '';
+      //     width: 336px;
+      //     height: 336px;
+      //     right: -70px;
+      //     bottom: 0;
+      //     opacity: 0.9;
+      //     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+      //     border-radius: 40px;
+      // }
 
-      &:before {
-          background: linear-gradient(135deg, #F2C314 0%, #FC3832 100%);
-      }
+      // &:before {
+      //     background: linear-gradient(135deg, #F2C314 0%, #FC3832 100%);
+      // }
 
-      &:after {
-          background: linear-gradient(135deg, #9C09DB 0%, #1C0FD7 100%);
-      }
+      // &:after {
+      //     background: linear-gradient(135deg, #9C09DB 0%, #1C0FD7 100%);
+      // }
 
       h2 {
           color: #000000;
@@ -141,18 +144,18 @@
           text-align: center;
           position: relative;
 
-          &:before {
-              position: absolute;
-              content: '';
-              width: 270px;
-              height: 270px;
-              box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-              border-radius: 40px;
-              background: linear-gradient(135deg, #32FBFC 0%, #3214F2 100%);
-              opacity: 0.9;
-              left: -70px;
-              top: -200px;
-          }
+          // &:before {
+          //     position: absolute;
+          //     content: '';
+          //     width: 270px;
+          //     height: 270px;
+          //     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+          //     border-radius: 40px;
+          //     background: linear-gradient(135deg, #32FBFC 0%, #3214F2 100%);
+          //     opacity: 0.9;
+          //     left: -70px;
+          //     top: -200px;
+          // }
 
           h2 {
               color: #000000;
@@ -172,16 +175,16 @@
 
       .swap-btn {
           height: 53px;
-          box-shadow: 0 2px 4px rgba(60, 9, 179, 0.3);
-          border-radius: 4px;
-          background-color: #540cfa;
+          background: #3C7EEA;
+          box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
+          border-radius: 8px;
           border: none;
           color: #ffffff;
           font-size: 16px;
           font-weight: 700;
           line-height: 19px;
           outline: none;
-
+          cursor: pointer;
           span {
               outline: none;
           }
@@ -206,6 +209,36 @@
               }
           }
       }
+  }
+}
+
+// --------------materials changes --------------------//
+
+:host::ng-deep {
+  form{
+    .mat-form-field-subscript-wrapper {
+      // margin: 0;
+    }
+    .mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+      background: #3C7EEA
+    }
+    display: flex;
+    flex-direction: column;
+    .mat-form-field-underline {
+      display: none;
+    }
+    label {
+      line-height: 44px;
+    }
+    .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+      line-height: normal;
+    }
+    .pass.mat-icon-button.mat-button-base {
+      position: absolute;
+      right: 0;
+      top: -37px;
+      font-size: 25px;
+    }
   }
 }
 
