--- a/src/app/authorization-page/login-page/login-page.component.scss
+++ b/src/app/authorization-page/login-page/login-page.component.scss
@@ -1,11 +1,11 @@
-.login-bl {
-  margin-top: 260px;
-}
+
+
 
 h2 {
   color: #000000;
   font-size: 36px;
-  font-weight: 900
+  font-weight: 900;
+  font-family: "Open Sans" ;
 }
 
 p {
@@ -13,12 +13,32 @@ p {
   font-size: 21px;
   font-weight: 300;
   text-align: center;
+  font-family: "Open Sans";
 }
 
 .form-control:focus {
   border: none;
   box-shadow: none;
   background-color: #f5f6fa;
+}
+form {
+  margin-top: 60px;
+}
+.example-container > * {
+  width: 100%;
+}
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+input.example-right-align {
+  -moz-appearance: textfield;
 }
 
 input {
@@ -27,7 +47,8 @@ input {
   background-color: #f5f6fa;
   border: none;
   outline: none;
-  padding: 0 30px 0 10px;
+  font-family: "Open Sans";
+  // padding: 0 30px 0 10px;
 
   &::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
@@ -62,104 +83,48 @@ input {
   }
 }
 
-.password {
-  position: relative;
-
-  .is-invalid+span:before {
-      display: none;
-  }
-
-  span.pass {
-      position: absolute;
-      right: 3px;
-      top: 1px;
-      width: 30px;
-      height: 44px;
-      cursor: pointer;
-
-      &:before {
-          position: absolute;
-          font-family: 'Font Awesome 5 Free';
-          font-weight: 900;
-          color: #dbdbdb;
-          font-size: 18px;
-          line-height: 44px;
-      }
-
-      &.hide:before {
-          content: '\f070'
-      }
-  }
+.pass.mat-icon-button.mat-button-base {
+  position: absolute;
+  right: 0;
+  top: -37px;
+  font-size: 25px;
 }
 
-.controll-block {
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-margin-bottom: 40px;
-}
-
-.get-pass {
-color: #a6a7a8;
-font-size: 14px;
-font-weight: 400;
-line-height: 16px;
-text-decoration: underline;
-cursor: pointer;
-line-height: 20px;
-}
-
-.checkbox {
-  .checkbox input {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-    margin: 10px 0 0 20px;
-    height: auto;
-    outline: none;
-  }
-  .checkbox__text {
-    position: relative;
-    padding: 0 0 0 25px;
-    cursor: pointer;
-    outline: none;
-    color: #a6a7a8;
-    font-size: 14px;
+.controls {
+  margin: 14px 0 40px;
+  display: flex;
+  justify-content: space-between;
+  .remember-me {
+    color: #707683;
+    font-family: "Source Sans";
     font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
   }
-  .checkbox__text:before {
-    content: '';
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    border: 1px solid #c8c8c8;
-    top: 2px;
-    left: 0;
-  }
-  .checkbox__text:after {
-    content: '\f00c';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    position: absolute;
-    top: 3px;
-    left: 3px;
-    transition: .2s;
-    display: none;
-    color: #000000;
-    font-size: 10px;
-  }
-  .checkbox input:checked + .checkbox__text:after {
-    display: block;
+  a {
+    font-family: Source Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    text-decoration-line: underline;
+    color: #707683;
+    &:hover {
+      color: #3C7EEA;
+    }
   }
 }
 
-.btn {
-  width: 193px;
-  height: 53px;
-  box-shadow: 0 2px 4px rgba(60, 9, 179, 0.3);
-  border-radius: 4px;
-  background-color: #540cfa;
+.submit {
+  text-align: center;
+  button{
+  padding: 13px 73px;
   color: #ffffff;
   font-size: 16px;
   font-weight: 700;
+  background: #3C7EEA;
+  box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
+  border-radius: 8px;
+  }
+
 }
