--- a/src/app/authorization-page/registration-page/registration-page.component.scss
+++ b/src/app/authorization-page/registration-page/registration-page.component.scss
@@ -28,100 +28,65 @@ border-radius: 5px;
 background-color: #f5f6fa;
 border: none;
 outline: none;
-padding: 0 30px 0 10px;
 
-&::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
-    color: #7a7a7a;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
+// &::-webkit-input-placeholder {
+//     /* Chrome/Opera/Safari */
+//     color: #7a7a7a;
+//     font-size: 16px;
+//     font-weight: 400;
+//     line-height: 20px;
+// }
+
+// &::-moz-placeholder {
+//     /* Firefox 19+ */
+//     color: #7a7a7a;
+//     font-size: 16px;
+//     font-weight: 400;
+//     line-height: 20px;
+// }
+
+// &:-ms-input-placeholder {
+//     /* IE 10+ */
+//     color: #7a7a7a;
+//     font-size: 16px;
+//     font-weight: 400;
+//     line-height: 20px;
+// }
+
+// &:-moz-placeholder {
+//     /* Firefox 18- */
+//     color: #7a7a7a;
+//     font-size: 16px;
+//     font-weight: 400;
+//     line-height: 20px;
+// }
+}
+.policy {
+  font-family: Source Sans;
+font-weight: 400;
+font-size: 14px;
+line-height: 18px;
+color: #707683;
+span {
+  text-decoration-line: underline;
+}
+}
+.social-login {
+  height: 20px;
+  margin: 32px 0 36px;
 }
 
-&::-moz-placeholder {
-    /* Firefox 19+ */
-    color: #7a7a7a;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-}
-
-&:-ms-input-placeholder {
-    /* IE 10+ */
-    color: #7a7a7a;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-}
-
-&:-moz-placeholder {
-    /* Firefox 18- */
-    color: #7a7a7a;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-}
-}
-
-.btn {
-width: 193px;
-height: 53px;
-box-shadow: 0 2px 4px rgba(60, 9, 179, 0.3);
-border-radius: 4px;
-background-color: #540cfa;
-color: #ffffff;
-font-size: 16px;
-font-weight: 700;
-}
-
-.checkbox {
-.checkbox{
-  padding-left: 30px;
-  color: #a6a7a8;
-  a {
-    color: #a6a7a8;
-    text-decoration: underline;
+.submit {
+  text-align: center;
+  button{
+  padding: 13px 73px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  background: #3C7EEA;
+  box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
+  border-radius: 8px;
   }
-  input {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-  margin: 10px 0 0 20px;
-  height: auto;
-  outline: none;
+
 }
-}
-.tcheckbox__text {
-  position: relative;
-  padding: 0 0 0 25px;
-  cursor: pointer;
-  outline: none;
-  color: #a6a7a8;
-  font-size: 14px;
-  font-weight: 400;
-}
-.checkbox__text:before {
-  content: '';
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  border: 1px solid #c8c8c8;
-  top: 4px;
-  left: 15px;
-}
-.checkbox__text:after {
-  content: '\f00c';
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  position: absolute;
-  top: 5px;
-  left: 18px;
-  transition: .2s;
-  display: none;
-  color: #000000;
-  font-size: 10px;
-}
-.checkbox input:checked + .checkbox__text:after {
-  display: block;
-}
-}
+
