--- a/src/app/authorization-page/registration-page/registration-page.component.html
+++ b/src/app/authorization-page/registration-page/registration-page.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <h2>Регистрация</h2>
       <p class="text">Добро пожаловать на лучшую платформу фриланса Whocan!</p>
-      <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+      <form #form="ngForm" [formGroup]="registrationForm" (ngSubmit)="registrate(form)">
         <mat-form-field>
             <mat-label>Email</mat-label>
           <input matInput type="email"formControlName="email" required />
@@ -38,7 +38,7 @@
             <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">{{ 'nooo' }}</mat-error>
         </mat-form-field>
         <section>
-            <mat-checkbox  class="policy" formControlName="agreed">Я согласен(а) с <span>Политикой конфиденциальности</span></mat-checkbox>
+            <mat-checkbox required  class="policy" formControlName="agreed">Я согласен(а) с <span>Политикой конфиденциальности</span></mat-checkbox>
         </section>
         <section class="social-login">
 
@@ -54,5 +54,5 @@
       </form>
     </div>
   </div>
-  <p>asdasdasdda</p>
 </div>
+<app-inform-popup *ngIf="message" [(message)] ="message"></app-inform-popup>
