--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #FBFBFB;
+  // border-bottom: 1px solid #FBFBFB;
 }
 .logo {
   height: 50px;
