--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -1,4 +1,5 @@
 <p>dashboard-page works!</p>
 <div class="wraper" *ngIf="user">
 <h1>{{ user.name }}</h1>
+<button (click)="logOut()"> logOut</button>
 </div>
