--- a/src/app/authorization-page/authentification-page/login-page/login-page.component.html
+++ b/src/app/authorization-page/authentification-page/login-page/login-page.component.html
@@ -40,6 +40,12 @@
           </section >
 
         </form>
+        <section class="social-login">
+            <span>или  зарегистрироваться с помощью </span>
+              <div class="social">
+                  <button class="fb"></button><button class="gl"></button><button class="lin"></button>
+              </div>
+          </section>
       </div>
     </div>
   </div>
