--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
@@ -7,9 +7,9 @@
         <mat-form-field>
             <mat-label>Email</mat-label>
           <input matInput type="email"formControlName="email" required />
-          <mat-error *ngIf="registrationForm.get('email').hasError('required')">{{ "erorr" }}</mat-error>
+          <mat-error *ngIf="registrationForm.get('email').hasError('required')">{{ "Введите Email" }}</mat-error>
           <mat-error *ngIf="registrationForm.get('email').hasError('email')">{{
-            "not email"
+            "Некорректный email"
           }}</mat-error>
         </mat-form-field>
         <mat-form-field>
@@ -21,22 +21,22 @@
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSmallCase') ? 'unvalidated': 'validated'"></span>
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSpecialCharacters') ? 'unvalidated': 'validated'"></span>
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
-              <div class="description">
-                <li *ngIf="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber')">need number</li>
-                <li *ngIf="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSmallCase')">small </li>
-                <li *ngIf="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasCapitalCase')">capital</li>
-                <li *ngIf="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSpecialCharacters')">specials </li>
-                <li *ngIf="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('minLengthCharacters')">to short</li>
-              </div>
+              <ul class="description" *ngIf="!registrationForm.controls['password'].unvalidated">
+                
+                <li *ngIf="registrationForm.controls['password'].hasError('hasNumber')">Должна быть минимум одна цифра</li>
+                <li *ngIf="registrationForm.controls['password'].hasError('hasSmallCase')">Должна быть минимум онда маленькая буква</li>
+                <li *ngIf="registrationForm.controls['password'].hasError('hasCapitalCase')">Должна быть минимум онда большая буква</li>
+                <li *ngIf="registrationForm.controls['password'].hasError('hasSpecialCharacters')">Должна быть минимум один спец символ</li>
+                <li *ngIf="registrationForm.controls['password'].hasError('minLengthCharacters')">Пароль не меньше 8 символов</li>
+              </ul>  
             </div>
             <button class="pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hideF" [style.color]="hideF ? '#DBDBDB': '#000'">
             <mat-icon>{{hideF ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
-            <mat-error *ngIf="registrationForm.get('password').hasError('required')">{{ "erorr" }}</mat-error>
-            <!-- <mat-error *ngIf="registrationForm.get('password').hasError('email')">{{
-              "not email"
-            }}</mat-error> -->
+            <mat-error *ngIf="registrationForm.get('password').hasError('required')">{{ "Введите пароль" }}</mat-error>
+            <mat-error *ngIf="registrationForm.get('password').invalid && !registrationForm.get('password').hasError('required')">{{'Слабый пароль'
+            }}</mat-error>
         </mat-form-field>
         <mat-form-field>
           <mat-label>Повторно введите пароль</mat-label>
@@ -46,26 +46,25 @@
             <mat-icon>{{hideS ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
             <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('required')">{{ "erorr" }}</mat-error>
-            <!-- <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('email')">{{
-              "not email"
-            }}</mat-error> -->
-            <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">{{ 'nooo' }}</mat-error>
+            <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">{{
+              "Пароли не совпадают"
+            }}</mat-error>
         </mat-form-field>
         <section>
             <mat-checkbox required  class="policy" formControlName="agreed">Я согласен(а) с <span>Политикой конфиденциальности</span></mat-checkbox>
         </section>
-        <section class="social-login">
-            <button>Google</button>
-        </section>
         <section  class="submit">
-
             <button  mat-button  type="submit" mat-raised-button>
                 Войти
             </button>
-
-
-          </section >
+        </section >
       </form>
+      <section class="social-login">
+        <span>или  зарегистрироваться с помощью </span>
+          <div class="social">
+            <button class="fb"></button><button class="gl"></button><button class="lin"></button>
+          </div>
+      </section>
     </div>
   </div>
 </div>
