--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -3,4 +3,16 @@
       <app-main-header [pageName]="'authoriz'"></app-main-header>
   </div>
 
+  <form #form="ngForm" [formGroup]="loginForm" (ngSubmit)="ResetPass(form)">
+
+      <mat-form-field appearance="legacy">
+          <mat-label>Email</mat-label>
+        <input matInput type="email" name="email"  formControlName="email" required>
+
+        <mat-error *ngIf="resetPass.get('email').hasError('required')">{{ "erorr" }}</mat-error>
+        <mat-error *ngIf="resetPass.get('email').hasError('email')">{{
+              "not email"
+            }}</mat-error>
+      </mat-form-field>
+  </form>
 </div>
